<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/Tutorial7Text"
        android:text="@string/tutorial7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"/>
    <ImageView
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:adjustViewBounds="true"
	    android:contentDescription="@string/image2"
	    android:src="@drawable/editbutton_off_tutorial"
	    android:scaleType="center"/>
    <TextView
        android:id="@+id/Tutorial8Text"
        android:text="@string/tutorial8"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/Tutorial9Text"
        android:text="@string/tutorial9"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/Tutorial10Text"
        android:text="@string/tutorial10"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"/>

</LinearLayout>